    instead.
  * Don't use relative imports. Thanks Robert Collins. (LP: #189429)
  * Remove the .bzr-builddeb from merge builds not in "larstiq" mode.
    (Closes: #464033)
  * Don't tell cp to be verbose when copying back the debian/ dir
    in bd-do.
  * Update the dependencies on bzr and bzrtools to more recent versions.
  * Update the VCS-Bzr: header for the new branch location.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 19 Mar 2008 20:32:30 +0000

bzr-builddeb (0.92) unstable; urgency=low

  * Support incremental imports of normal mode packages from source packages
    for uploads done outside the VCS.
  * Also look for upstream tarballs in the archives. Do this in preference
    to the watch file, for the case where the upstream was repacked.
  * Filter out any changes to .bzr in packages that are being imported as they
    will totally mess things up. If the branch is in the source package then
    just use apt-get source. (LP: #156003)
  * bzr 0.92 is required.
  * Improve the error message when the upstream tag is not found to actually
    give the name of the expected tag.
  * Allow the last upstream not to be on the mainline during merge-upstream.
  * Don't complain when repacking the tarball if the target exists, but is the
    same as the source. Only .tar.gz can be considered identical.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 31 Oct 2007 21:06:58 +0000

bzr-builddeb (0.91) unstable; urgency=low

  [ Frédéric Brin ]
  * Correct unknown variable (files) when importing dsc.
  * chmod 755 debian/rules when importing dsc

  [ James Westby ]
  * Now handles merge mode with multiple entries in the root of
    upstream's tarball, which was causing havoc with dh-make-php packages.
    Thanks to Mark A. Hershberger for the report and Adeodato Simó
    for the pointer to the fix. (Closes: #440069)
  * Add version_info attribute so that bzrlib can find out the version of